# brainfuck

./: .gitignore  Cargo.toml  Readme.md  broken.bf  flake.nix  main.bf
comp2c/: Cargo.toml
comp2c/src/: main.rs
craneliftcomp/: Cargo.toml
craneliftcomp/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs
parser/: Cargo.toml  lib.wasm
parser/src/: lib.rs
