[package]
name = "craneliftcomp"
version = "0.1.0"
authors = ["Lars Mühmel <larsmuehmel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser/" }
cranelift = "0.66.0"
cranelift-object = "0.66.0"
cranelift-module = "0.66.0"
target-lexicon = "0.10.0"
anyhow = "1.0.32"
