[package]
name = "gui"
version = "0.1.0"
authors = ["Lars Mühmel <larsmuehmel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "8600e423b132c36b4ee23ed6a4998cc1b19554da" }
